--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "@tanstack/react-query": "^5.36.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.1.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
     "react-tabs": "^6.0.2",
+    "react-to-pdf": "^1.0.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
     "swiper": "^11.1.1"
